# telegram-bot-word-of-words

./: config.py  pyproject.toml
bot/: __init__.py
classes/: class_basic_word.py  class_bot.py  class_player.py  class_word_of_words.py
data/: fake_scores.json  scores.json
saver/: __init__.py
tests/: test_class_basic_word.py  test_class_player.py  test_class_word_of_words.py  test_saver.py
utils/: for_bot.py  for_save.py  for_words.py
