[tool.poetry]
name = "telegram-bot-word-of-words"
version = "0.1.0"
description = ""
authors = ["Egor Nikitin <eganik5674@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytelegrambotapi = "^4.14.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.12.1"
mypy = "^1.8.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    )/

)
'''

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
